# target-sendgrid

./: README.md  meltano.yml  pyproject.toml
target_sendgrid/: __init__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
